--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             <div class="cta-section">
                 <a href="#" class="cta-button" data-navigate="cuestion">Cuéntanos Tu Idea</a>
-                <a href="#" class="cta-button secondary-cta">Ver Proyectos Anteriores</a>
+                <a href="https://juanfe123.github.io/tusides2/" class="cta-button secondary-cta">Ver Proyectos Anteriores</a>
             </div>
         </div>
     </div>
